--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : "Riddance's Blog"
 tagline: Site Tagline
 author :
-  name : yi
+  name : yixiong
   email : yixiongx@gmail.com
   github : Riddance
   twitter : username
@@ -82,7 +82,7 @@ JB :
   comments :
     provider : disqus
     disqus :
-      short_name : jekyllbootstrap
+      short_name : riddance
     livefyre :
       site_id : 123
     intensedebate :
