--- a/_config.yml
+++ b/_config.yml
@@ -11,7 +11,7 @@ highlighter: pygments
 title : "Riddance's Blog"
 tagline: Site Tagline
 author :
-  name : yixiong
+  name : yixiongx
   email : yixiongx@gmail.com
   github : Riddance
   twitter : username
